# README-delete

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: daily-signals.yml  weekly-retrain.yml
dashboard/: app.py
dashboard/pages/: 1_Daily_Signals.py  2_Performance.py  3_Model_Metrics.py
dashboard/utils/: __init__.py  database.py
docs/: 01_SPECIFICATION.md  02_ARCHITECTURE.md  03_IMPLEMENTATION.md  04_INFRASTRUCTURE.md  05_IMPLEMENTATION_PLAN.md  06_FUTURE_ROADMAP.md  07_PHASE3_IMPROVEMENT_PLAN.md  ARCHITECTURE.md  HOWTO.md
models/: robust_classifier_logistic_20251124_013150.joblib  volatility_forecaster_classification_SPY_20251124_003740.joblib
notebooks/: 01_data_exploration.py
options-ml-trader/: .env.example  .gitignore  requirements.txt
scripts/: analyze_and_improve.py  diagnose_model.py  fetch_data.py  train_model.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  feature_store.py  yfinance_loader.py
src/features/: __init__.py  earnings_calendar.py  iv_indicators.py  macro_indicators.py  sentiment_indicators.py  technical_indicators.py
src/models/: __init__.py  direction_classifier.py  feature_pipeline.py  hyperparameter_tuning.py  inference.py  regime_classifier.py  robust_classifier.py  strategy_selector.py  threshold_optimizer.py  trading_threshold.py  volatility_forecaster.py
src/strategy/: __init__.py  options_rules.py
src/utils/: logger.py  (+1 more)
tests/: __init__.py  test_technical_indicators.py  test_yfinance_loader.py
